--- a/mapSearch/WebContent/about.html
+++ b/mapSearch/WebContent/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko-kr">
 <head>
+	<link rel="shortcut icon" href="images/favicon.png">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Investment Business - Bootstrap Theme</title>
+	<title>상권이으리</title>
 
 	<!-- CSS includes -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +34,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a href="index.html" title="Investment Business Bootstrap Theme">
+			<a href="#" title="Investment Business Bootstrap Theme">
                 <img class="logo" src="images/logo7.png" alt="Investment Business Bootstrap Theme" style="margin-top:0;" />
             </a>
 		</div>
@@ -42,7 +43,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="index.html" >HOME</a></li>
 				<li class="active"><a href="about.html" class="smooth-scroll">TEAM</a></li>
-				<li><a href="services.html">SERVICES</a></li>
+				<li><a href="mapSquare.jsp">SERVICES</a></li>
 				<li><a href="project.html">PROJECT</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
@@ -59,9 +60,14 @@
 				<img class="img-responsive" style="width:250px; height:250px;" src="images/image5.jpg" />
 			</div>
 			<div class="col-md-8">
-				<h2 class="text-warning">Our Team</h2>
-				<h3>What About Us?</h3>
-				<p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<h2 class="text-warning">상권이으리란? </h2>
+				<br>
+				<h3>성공적인 창업을 위해 </h3>
+				<h3>상권이으리가 의리로 함께 하겠습니다.</h3>	
+				<br>
+				<p class="text-justify">상권이으리는 수많은 데이터를 기반으로 한 철저한 분석으로 성공적인 창업을 함께 하고자 합니다. 
+					희망상권 내의 상주인구, 유동인구, 배후지 정보, 관련 업종의 매장 수, 매출 등을 - 이세돌도 울게 만든 - 머신러닝, 딥러닝 알고리즘으로 분석해 최적의 입지 정보를 제공해드립니다.
+					상권이으리와 함께라면 누구나 손쉽게 상권분석의 전문가가 되실 수 있습니다.</p>
 			</div>
 		</div>
     </div>
@@ -70,28 +76,28 @@
 <div class="container-team">
     <div class="container">
         <div class="page-header" id="team">
-			<h1 class="text-warning">Out Team</h1>
+			<h1 class="text-warning">상권이으리의 으리으리한 형제, 자매</h1>
         </div>
         <div class="row text-center">
 			<div class="col-md-3">
 				<img class="img-responsive" style="width:250px; height:250px;" src="images/image1.jpg" />
-				<h4 class="text-warning">Mike Miller</h4>
-				<p>SEO</p>
+				<h4 class="text-warning">정이으리</h4>
+				<p>CEO</p>
 			</div>
 			<div class="col-md-3">
 				<img class="img-responsive" style="width:250px; height:250px;" src="images/image2.jpg" />
-				<h4 class="text-warning">Anna Smithson</h4>
-				<p>Lead Designer</p>
+				<h4 class="text-warning">이지혜</h4>
+				<p>Data engineer</p>
 			</div>
 			<div class="col-md-3">
 				<img class="img-responsive" style="width:250px; height:250px;" src="images/image3.jpg" />
-				<h4 class="text-warning">Dave Johnson</h4>
-				<p>Lead Programer</p>
+				<h4 class="text-warning">전상아리</h4>
+				<p>Data Analyst</p>
 			</div>
 			<div class="col-md-3">
 				<img class="img-responsive" style="width:250px; height:250px;" src="images/image4.jpg" />
-				<h4 class="text-warning">Laura Izaura</h4>
-				<p>Manager</p>
+				<h4 class="text-warning">김필구</h4>
+				<p>Designer</p>
 			</div>
 		</div>
     </div>
