--- a/mapSearch/WebContent/index.html
+++ b/mapSearch/WebContent/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko-kr">
 <head>
+	<link rel="shortcut icon" href="./images/favicon.ico">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Investment Business - Bootstrap Theme</title>
+	<title>상권이으리</title>
 
 	<!-- CSS includes -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +43,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li class="active"><a href="index.html" class="smooth-scroll">HOME</a></li>
 				<li><a href="about.html">TEAM</a></li>
-				<li><a href="services.html">SERVICES</a></li>
+				<li><a href="mapService.jsp">SERVICES</a></li>
 				<li><a href="project.html">PROJECT</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
@@ -61,28 +62,14 @@
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
 		<div class="item active">
-			<img src="images/startup.jpg" alt="carousel1" style="width:100%;" />
+			<img src="images/startup.jpg" alt="carousel1" style="width:100%" />
 			<div class="carousel-caption">
 				<h1 class="text-warning">최상의 입지를 분석해드립니다.</h1> <!-- theme.css 1179, 1354 -->
-				<h2>consulting center</h2>
+				<h2 class="text-img">consulting center</h2>
 			</div>
 		</div>
-		<!-- <div class="item">
-			<img src="images/shopping.jpg" alt="carousel2" style="width:100%" />
-			<div class="carousel-caption">
-				<h1 class="text-warning">Accounting</h1>
-				<h2>valuations</h2>
-			</div>
-		</div> -->
-		<!-- <div class="item">
-			<img src="images/carousel3.jpg" alt="carousel3" style="width:100%">
-			<div class="carousel-caption">
-				<h1 class="text-warning">Operation</h1>
-				<h2>consulting center</h2>
-			</div>
-		</div> -->
+
 	</div>
-	
 	<!-- Controls -->
 	<a class="left carousel-control" href="#theme-carousel" role="button" data-slide="prev">
         <div class="carousel-control-arrow">&#8249;</div>
@@ -104,83 +91,36 @@
 					</div>
 				</div>
 	</div>
-    <div class="container">
-		<div class="page-header" id="home">
-        </div>
-        <div class="row">
-			<div class="col-md-4">
-				<img class="img-responsive" src="images/sangil.jpg" />
-			</div>
-			<div class="col-md-4">
-				<h2 class="text-warning">About Us</h2>
-				<h3>What About Us?</h3>
-				<p class="text-justify">상권이으리는 골목 상권을 구성하는 요인들을 분석해 성공적인 창업을 유도합니다. </p>
-			</div>
-			<div class="col-md-4">
-				<h2 class="text-warning">Services</h2>
-				<h3>What`s New?</h3>
-				<p>
-				<ul>
-					<li>Estate Preservation</li>
-					<li>Education Funding</li>
-					<li>Stock Option Planning</li>
-					<li>Retirement Planning</li>
-					<li>Insurance Planning</li>
-					<li>Cash Flow Management</li>
-					<li>Tax Planning</li>
-				</ul>
-				</p>
-			</div>
-		</div>
-    </div>
-</div>
 
-<div class="container-help">
-    <div class="container">
-        <div class="page-header" id="help">
-			<h1>Just In Case You Need Any Help</h1>
-        </div>
-        <div class="row text-center">
-			<div class="col-md-3">
-				<span class="services-circle text-center"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></span>
-				<h3>Email Support</h3>
-			</div>
-			<div class="col-md-3">
-				<span class="services-circle text-center"><i class="fa fa-wrench fa-4x" aria-hidden="true"></i></span>
-				<h3>24/7 Support</h3>
-			</div>
-			<div class="col-md-3">
-				<span class="services-circle text-center"><i class="fa fa-mobile fa-4x" aria-hidden="true"></i></span>
-				<h3>Free Phone</h3>
-			</div>
-			<div class="col-md-3">
-				<span class="services-circle text-center"><i class="fa fa-question fa-4x" aria-hidden="true"></i></span>
-				<h3>FAQ</h3>
-			</div>
-		</div>
-    </div>
-</div>
-
-<div class="container-client">
-    <div class="container">
-        <div class="page-header" id="client">
-        </div>
-        <div class="row text-center">
-			<div class="col-md-3">
-				<img class="img-responsive" style="width:150px; height:150px;" src="images/client1.jpg" />
-			</div>
-			<div class="col-md-3">
-				<img class="img-responsive" style="width:150px; height:150px;" src="images/client2.jpg" />
-			</div>
-			<div class="col-md-3">
-				<img class="img-responsive" style="width:150px; height:150px;" src="images/client3.jpg" />
-			</div>
-			<div class="col-md-3">
-				<img class="img-responsive" style="width:150px; height:150px;" src="images/client4.jpg" />
+		<div class="container-help">
+			<div class="container">
+				<div class="page-header" id="help">
+					<h1>문의사항이 있을 시 연락주세요</h1>
+				</div>
+				<div class="row text-center">
+					<div class="col-md-3">
+						<span class="services-circle text-center"><i
+							class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></span>
+						<h3>이메일</h3>
+					</div>
+					<div class="col-md-3">
+						<span class="services-circle text-center"><i
+							class="fa fa-wrench fa-4x" aria-hidden="true"></i></span>
+						<h3>365일 무료 챗봇</h3>
+					</div>
+					<div class="col-md-3">
+						<span class="services-circle text-center"><i
+							class="fa fa-mobile fa-4x" aria-hidden="true"></i></span>
+						<h3>무료전화</h3>
+					</div>
+					<div class="col-md-3">
+						<span class="services-circle text-center"><i
+							class="fa fa-question fa-4x" aria-hidden="true"></i></span>
+						<h3>FAQ</h3>
+					</div>
+				</div>
 			</div>
 		</div>
-    </div>
-</div>
 
 <footer id="subfooter" class="clearfix">
     <div class="container">
@@ -199,7 +139,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Enter your email..." />
                         <span class="input-group-btn">
-                            <button class="btn btn-primary" type="button">Subscribe</button>
+                            <button class="btn btn-primary" type="button" onclick="location.href:'about.html'">Subscribe</button>
                         </span>
                     </div>
                 </p>
@@ -212,40 +152,14 @@
     <div class="container">
         <div class="row">
 			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; Contact Us</h4>
+				<h4 class="text-warning"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; 문의하기</h4>
 				<ul>
-					<li>54, North Road, PA 45086, USA</li>
-					<li>+1 888 455 6677</li>
-					<li><a href="mailto:mail@example.com">mail@example.com</a></li>
+					<li>서울 종로구 새문안로5가길 32 706호</li>
+					<li>대표전화 : 02-724-1114</li>
+					<li><a href="mailto:mail@example.com">kpc@kpc.com</a></li>
 				</ul>
 			</div>
-			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-file-text-o" aria-hidden="true"></i>&nbsp; Archive</h4>
-				<p>
-				<ul>
-					<li>May, 2015</li>
-					<li>April, 2015</li>
-					<li>March, 2015</li>
-					<li>February, 2016</li>
-					<li>January, 2016</li>
-				</ul>
-				</p>
-			</div>
-			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-info" aria-hidden="true"></i>&nbsp; License</h4>
-				<p>
-				<ul>
-					<li>Online verification</li>
-					<li>Renewal License</li>
-					<li>Report illegal</li>
-					<li>More information</li>
-					<li>FAQs</li>
-				</ul>
-				</p>
-			</div>
-            <div class="col-md-3">
-                <p style="padding-top: 40px;">Created by <a href="https://www.shieldui.com" title="Shield UI">Shield UI</a> and hosted <br /> by <a href="https://www.prepbootstrap.com" title="PrepBootstrap">PrepBootstrap</a></p>
-            </div>
+			
         </div>
     </div>
 </footer>
@@ -294,7 +208,7 @@
 }
 </style>
 
-<a href="services.html;" class="scrollTopBtn" style="position:fixed; right:25px; bottom:25px; display:block; color:#ffffff; z-index:999" id="click">상권분석하러가기</a>
+<a href="mapSquare.jsp;" class="scrollTopBtn" style="position:fixed; right:25px; bottom:25px; display:block; color:#ffffff; z-index:999" id="click">상권분석하러가기</a>
 <!-- /* 버튼의 위치를 변경하려면, right와 bottom의 픽셀(px) 값을 바꿔주세요. */
 /* 텍스트 색상을 바꾸려면, color: #ffffff 의 색상값을 바꿔주세요. */
 /* 텍스트를 바꾸려면, 한글로 써진 부분을 바꿔주세요. 예를 들면 [상단이동]을 [TOP]으로 바꿀 수 있습니다. */ -->
