상권분석하러가기 href 수정

--- a/mapSearch/WebContent/index.html
+++ b/mapSearch/WebContent/index.html
@@ -62,7 +62,7 @@
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
 		<div class="item active">
-			<img src="images/startup.jpg" alt="carousel1" style="width:100%" />
+			<img src="images/startup.jpg" alt="carousel1" style="width:100%; max-width:1360px; margin-left:auto; margin-right:auto" />
 			<div class="carousel-caption">
 				<h1 class="text-warning">최상의 입지를 분석해드립니다.</h1> <!-- theme.css 1179, 1354 -->
 				<h2 class="text-img">consulting center</h2>
@@ -208,7 +208,7 @@
 }
 </style>
 
-<a href="mapSquare.jsp;" class="scrollTopBtn" style="position:fixed; right:25px; bottom:25px; display:block; color:#ffffff; z-index:999" id="click">상권분석하러가기</a>
+<a href="mapService.jsp;" class="scrollTopBtn" style="position:fixed; right:25px; bottom:25px; display:block; color:#ffffff; z-index:999" id="click">상권분석하러가기</a>
 <!-- /* 버튼의 위치를 변경하려면, right와 bottom의 픽셀(px) 값을 바꿔주세요. */
 /* 텍스트 색상을 바꾸려면, color: #ffffff 의 색상값을 바꿔주세요. */
 /* 텍스트를 바꾸려면, 한글로 써진 부분을 바꿔주세요. 예를 들면 [상단이동]을 [TOP]으로 바꿀 수 있습니다. */ -->
