--- a/mapSearch/WebContent/project.html
+++ b/mapSearch/WebContent/project.html
@@ -44,7 +44,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="index.html">HOME</a></li>
 				<li><a href="about.html">TEAM</a></li>
-				<li><a href="mapSquare.jsp">SERVICES</a></li>
+				<li><a href="mapService.jsp">SERVICES</a></li>
 				<li class="active"><a href="project.html" class="smooth-scroll">PROJECT</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
