--- a/mapSearch/WebContent/about.html
+++ b/mapSearch/WebContent/about.html
@@ -43,7 +43,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="index.html" >HOME</a></li>
 				<li class="active"><a href="about.html" class="smooth-scroll">TEAM</a></li>
-				<li><a href="mapSquare.jsp">SERVICES</a></li>
+				<li><a href="mapService.jsp">SERVICES</a></li>
 				<li><a href="project.html">PROJECT</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
@@ -85,18 +85,18 @@
 				<p>CEO</p>
 			</div>
 			<div class="col-md-3">
-				<img class="img-responsive" style="width:250px; height:250px;" src="images/image2.jpg" />
-				<h4 class="text-warning">이지혜</h4>
+				<img class="img-responsive" style="width:250px; height:250px;" src="images/jeje.jpg" />
+				<h4 class="text-warning">졔졔</h4>
 				<p>Data engineer</p>
 			</div>
 			<div class="col-md-3">
-				<img class="img-responsive" style="width:250px; height:250px;" src="images/image3.jpg" />
+				<img class="img-responsive" style="width:250px; height:250px;" src="images/sangari.jpg" />
 				<h4 class="text-warning">전상아리</h4>
 				<p>Data Analyst</p>
 			</div>
 			<div class="col-md-3">
-				<img class="img-responsive" style="width:250px; height:250px;" src="images/image4.jpg" />
-				<h4 class="text-warning">김필구</h4>
+				<img class="img-responsive" style="width:250px; height:250px;" src="images/pingu.jpg" />
+				<h4 class="text-warning">핑구</h4>
 				<p>Designer</p>
 			</div>
 		</div>
