--- a/mapSearch/WebContent/contact.html
+++ b/mapSearch/WebContent/contact.html
@@ -43,7 +43,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="index.html">HOME</a></li>
 				<li><a href="about.html">TEAM</a></li>
-				<li><a href="services.html">SERVICES</a></li>
+				<li><a href="mapService.jsp">SERVICES</a></li>
 				<li><a href="project.html">PROJECT</a></li>
 				<li class="active"><a href="contact.html"  class="smooth-scroll">CONTACT</a></li>
 			</ul>
