--- a/mapSearch/WebContent/index.html
+++ b/mapSearch/WebContent/index.html
@@ -83,7 +83,7 @@
 
 	<div class="section text-exhibition">
 				<div class="inner-cont">
-					<div class="sentence">
+					<div class="sentence" style="width:100%; max-width:1360px; margin-left:auto; margin-right:auto">
 						<p><span>새로운 도전을 준비중이신가요?</span></p>
 
 						<p><span>당신의 도전이 아름다운 봄이 될 수 있도록 응원드릴게요.</span></p>
@@ -121,7 +121,7 @@
 				</div>
 			</div>
 		</div>
-
+</div>
 <footer id="subfooter" class="clearfix">
     <div class="container">
         <div class="row">
