--- a/mapSearch/WebContent/index.html
+++ b/mapSearch/WebContent/index.html
@@ -100,7 +100,7 @@
 				<div class="row text-center">
 					<div class="col-md-3">
 						<span class="services-circle text-center"><i
-							class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></span>
+							class="fa fa-envelope-o fa-4x" aria-hidden="true" ></i></span>
 						<h3>이메일</h3>
 					</div>
 					<div class="col-md-3">
@@ -114,8 +114,8 @@
 						<h3>무료전화</h3>
 					</div>
 					<div class="col-md-3">
-						<span class="services-circle text-center"><i
-							class="fa fa-question fa-4x" aria-hidden="true"></i></span>
+						<span class="services-circle text-center" onclick="location.href="'milto:kpc@kpc.com'"><i
+							class="fa fa-question fa-4x" aria-hidden="true"></a></i></span>
 						<h3>FAQ</h3>
 					</div>
 				</div>
