--- a/mapSearch/WebContent/about.html
+++ b/mapSearch/WebContent/about.html
@@ -106,85 +106,22 @@
 <div class="container-help">
     <div class="container">
         <div class="page-header" id="help">
-			<h1>Introducing The Business</h1>
+			<h1>왜 상권분석인가?</h1>
         </div>
         <div class="row text-justify">
 			<div class="col-md-12">
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+				<p> 우리나라의 외식산업은 2005년 54만 6504곳에서 2015년 65만 7086곳으로 10년 간 20% 증가했다. 
+						하지만 폐업률이 21.9%로 전 산업의 평균 폐업률인 11.8%에 비하면 2배 가량에 이르는 규모이다.
+						특히 이 중 골목상권의 소규모 창업자들은 5년 내 폐업률 70%을 기록하고 있습니다.
+						저희는 이러한 외식산업의 자영업자분들이 철저한 분석을 통해 성공적인 창업과 지속가능한 경영을 할 수 있도록
+						예비 창업자들을 돕도록 하겠습니다.
+						</p>
 			</div>
 		</div>
     </div>
 </div>
 
-<div class="container-choose">
-    <div class="container">
-        <div class="page-header" id="choose">
-			<h1 class="text-warning">Why Choose Us</h1>
-		</div>
-		<div class="row">
-            <div class="col-md-3">
-				<div class="row">
-					<div class="col-md-4 text-center">
-						<span class="choose-circle text-center"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></span>
-					</div>
-					<div class="col-md-8">
-						<h4>Email Support</h4>
-					</div>
-				</div>
-				<div class="row" style="margin-top: 20px;">
-					<div class="col-md-12">
-						<p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="row">
-					<div class="col-md-4 text-center">
-						<span class="choose-circle text-center"><i class="fa fa-wrench fa-2x" aria-hidden="true"></i></span>
-					</div>
-					<div class="col-md-8">
-						<h4>24/7 Support</h4>
-					</div>
-				</div>
-				<div class="row" style="margin-top: 20px;">
-					<div class="col-md-12">
-						<p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="row">
-					<div class="col-md-4 text-center">
-						<span class="choose-circle text-center"><i class="fa fa-mobile fa-2x" aria-hidden="true"></i></span>
-					</div>
-					<div class="col-md-8">
-						<h4>Free Phone</h4>
-					</div>
-				</div>
-				<div class="row" style="margin-top: 20px;">
-					<div class="col-md-12">
-						<p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="row">
-					<div class="col-md-4 text-center">
-						<span class="choose-circle text-center"><i class="fa fa-question fa-2x" aria-hidden="true"></i></span>
-					</div>
-					<div class="col-md-8">
-						<h4>FAQ</h4>
-					</div>
-				</div>
-				<div class="row" style="margin-top: 20px;">
-					<div class="col-md-12">
-						<p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+
 
 <footer id="subfooter" class="clearfix">
     <div class="container">
@@ -216,40 +153,14 @@
     <div class="container">
         <div class="row">
 			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; Contact Us</h4>
+				<h4 class="text-warning"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; 문의하기</h4>
 				<ul>
-					<li>54, North Road, PA 45086, USA</li>
-					<li>+1 888 455 6677</li>
-					<li><a href="mailto:mail@example.com">mail@example.com</a></li>
+					<li>서울 종로구 새문안로5가길 32 706호</li>
+					<li>대표전화 : 02-724-1114</li>
+					<li><a href="mailto:mail@example.com">kpc@kpc.com</a></li>
 				</ul>
 			</div>
-			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-file-text-o" aria-hidden="true"></i>&nbsp; Archive</h4>
-				<p>
-				<ul>
-					<li>May, 2015</li>
-					<li>April, 2015</li>
-					<li>March, 2015</li>
-					<li>February, 2016</li>
-					<li>January, 2016</li>
-				</ul>
-				</p>
-			</div>
-			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-info" aria-hidden="true"></i>&nbsp; License</h4>
-				<p>
-				<ul>
-					<li>Online verification</li>
-					<li>Renewal License</li>
-					<li>Report illegal</li>
-					<li>More information</li>
-					<li>FAQs</li>
-				</ul>
-				</p>
-			</div>
-            <div class="col-md-3">
-                <p style="padding-top: 40px;">Created by <a href="https://www.shieldui.com" title="Shield UI">Shield UI</a> and hosted <br /> by <a href="https://www.prepbootstrap.com" title="PrepBootstrap">PrepBootstrap</a></p>
-            </div>
+			
         </div>
     </div>
 </footer>
