--- a/mapSearch/WebContent/index.html
+++ b/mapSearch/WebContent/index.html
@@ -79,49 +79,26 @@
 	</a>
 </div>
 
-<div class="container-home">
+<div class="container-bottom">
 
-	<div class="section text-exhibition">
-				<div class="inner-cont">
-					<div class="sentence" style="width:100%; max-width:1360px; margin-left:auto; margin-right:auto">
-						<p><span>새로운 도전을 준비중이신가요?</span></p>
+		<div class="section text-exhibition">
+			<div class="inner-cont">
+				<div class="sentence"
+					style="width: 100%; max-width: 1360px; margin-left: auto; margin-right: auto">
+					<p>
+						<span>새로운 도전을 준비중이신가요?</span>
+					</p>
 
-						<p><span>당신의 도전이 아름다운 봄이 될 수 있도록 응원드릴게요.</span></p>
+					<p>
+						<span>당신의 도전이 아름다운 봄이 될 수 있도록 응원드릴게요.</span>
+					</p>
 
-					</div>
-				</div>
-	</div>
-
-		<div class="container-help">
-			<div class="container">
-				<div class="page-header" id="help">
-					<h1>문의사항이 있을 시 연락주세요</h1>
-				</div>
-				<div class="row text-center">
-					<div class="col-md-3">
-						<span class="services-circle text-center"><i
-							class="fa fa-envelope-o fa-4x" aria-hidden="true" ></i></span>
-						<h3>이메일</h3>
-					</div>
-					<div class="col-md-3">
-						<span class="services-circle text-center"><i
-							class="fa fa-wrench fa-4x" aria-hidden="true"></i></span>
-						<h3>365일 무료 챗봇</h3>
-					</div>
-					<div class="col-md-3">
-						<span class="services-circle text-center"><i
-							class="fa fa-mobile fa-4x" aria-hidden="true"></i></span>
-						<h3>무료전화</h3>
-					</div>
-					<div class="col-md-3">
-						<span class="services-circle text-center" onclick="location.href="'milto:kpc@kpc.com'"><i
-							class="fa fa-question fa-4x" aria-hidden="true"></a></i></span>
-						<h3>FAQ</h3>
-					</div>
 				</div>
 			</div>
 		</div>
-</div>
+
+
+	</div>
 <footer id="subfooter" class="clearfix">
     <div class="container">
         <div class="row">
