--- a/mapSearch/WebContent/contact.html
+++ b/mapSearch/WebContent/contact.html
@@ -1,6 +1,93 @@
 <!DOCTYPE html>
 <html lang="ko-kr">
 <head>
+
+	<style>
+	.map_wrap, .map_wrap * {
+		margin: 0;
+		padding: 0;
+		font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;
+		font-size: 12px;
+	}
+	
+	.map_wrap {
+		position: relative;
+		height: 407px
+	}
+	.placeinfo_wrap {
+	position: absolute;
+	bottom: 28px;
+	left: -150px;
+	width: 300px;
+	}
+	.placeinfo {
+		position: relative;
+		width: 100%;
+		border-radius: 6px;
+		border: 1px solid #ccc;
+		border-bottom: 2px solid #ddd;
+		padding-bottom: 10px;
+		background: #fff;
+	}
+	.placeinfo:nth-of-type(n) {
+		border: 0;
+		box-shadow: 0px 1px 2px #888;
+	}
+	.placeinfo_wrap .after {
+		content: '';
+		position: relative;
+		margin-left: -12px;
+		left: 50%;
+		width: 22px;
+		height: 12px;
+		background:
+			url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')
+	}
+	.placeinfo a, .placeinfo a:hover, .placeinfo a:active {
+		color: #fff;
+		text-decoration: none;
+	}
+	.placeinfo a, .placeinfo span {
+		display: block;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
+	}
+	.placeinfo span {
+		margin: 5px 5px 0 5px;
+		cursor: default;
+		font-size: 13px;
+	}
+	.placeinfo .title {
+		font-weight: bold;
+		font-size: 14px;
+		border-radius: 6px 6px 0 0;
+		margin: -1px -1px 0 -1px;
+		padding: 10px;
+		color: #fff;
+		background: #d95050;
+		background: #d95050
+			url(http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png)
+			no-repeat right 14px center;
+	}
+	.placeinfo .tel {
+		color: #0f7833;
+	}
+	.placeinfo .jibun {
+		color: #999;
+		font-size: 11px;
+		margin-top: 0;
+	}
+	div.check {
+		text-align: center;
+	}
+	#error {
+		color: #333333;
+		cursor: context-menu;
+		display: none;
+	}
+	</style>
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -54,11 +141,14 @@
 <div class="container-contact">
     <div class="container">
 	    <div class="page-header" id="contact">
-            <h1>Get In Touch With Us</h1>
+            <h1>찾아오시는 길</h1>
 			<br />
 			<div class="row">
 				<div class="col-md-6">
-					<div id="googlemap"></div>
+					<div class="map_wrap">
+						<div id="map"
+							style="width: 100%; height: 100%; position: relative; overflow: hidden;"></div>
+						</div>
 				</div>
 				<div class="col-md-6">
 					<form>
@@ -117,40 +207,14 @@
     <div class="container">
         <div class="row">
 			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; Contact Us</h4>
+				<h4 class="text-warning"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; 문의하기</h4>
 				<ul>
-					<li>54, North Road, PA 45086, USA</li>
-					<li>+1 888 455 6677</li>
-					<li><a href="mailto:mail@example.com">mail@example.com</a></li>
+					<li>서울 종로구 새문안로5가길 32 706호</li>
+					<li>대표전화 : 02-724-1114</li>
+					<li><a href="mailto:mail@example.com">kpc@kpc.com</a></li>
 				</ul>
 			</div>
-			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-file-text-o" aria-hidden="true"></i>&nbsp; Archive</h4>
-				<p>
-				<ul>
-					<li>May, 2015</li>
-					<li>April, 2015</li>
-					<li>March, 2015</li>
-					<li>February, 2016</li>
-					<li>January, 2016</li>
-				</ul>
-				</p>
-			</div>
-			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-info" aria-hidden="true"></i>&nbsp; License</h4>
-				<p>
-				<ul>
-					<li>Online verification</li>
-					<li>Renewal License</li>
-					<li>Report illegal</li>
-					<li>More information</li>
-					<li>FAQs</li>
-				</ul>
-				</p>
-			</div>
-            <div class="col-md-3">
-                <p style="padding-top: 40px;">Created by <a href="https://www.shieldui.com" title="Shield UI">Shield UI</a> and hosted <br /> by <a href="https://www.prepbootstrap.com" title="PrepBootstrap">PrepBootstrap</a></p>
-            </div>
+			
         </div>
     </div>
 </footer>
@@ -174,6 +238,54 @@
         );
     });
 </script>
+
+<script type="text/javascript"
+		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55d81c6e682f667cceb61a2a681598bf&libraries=services"></script>
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script>
+		
+		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+		mapOption = {
+			center : new daum.maps.LatLng(37.575001, 126.973395), // 지도의 중심좌표
+			level : 3, // 지도의 확대 레벨
+		};
+
+		//지도를 생성합니다
+		var map = new daum.maps.Map(mapContainer, mapOption), customOverlay = new daum.maps.CustomOverlay(
+				{}), infowindow = new daum.maps.InfoWindow({
+			removable : true
+		});
+		
+		// 마커가 표시될 위치입니다 
+		var markerPosition  = new daum.maps.LatLng(37.575001, 126.973395); 
+
+		// 마커를 생성합니다
+		var marker = new daum.maps.Marker({
+		    position: markerPosition
+		});
+
+		// 마커가 지도 위에 표시되도록 설정합니다
+		marker.setMap(map);
+		//=============================================================================================================
+		//=============================================================================================================
+
+		//일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
+		var mapTypeControl = new daum.maps.MapTypeControl();
+
+		// 지도에 컨트롤을 추가해야 지도위에 표시됩니다
+		// daum.maps.ControlPosition은 컨트롤이 표시될 위치를 정의하는데 TOPRIGHT는 오른쪽 위를 의미합니다
+		map.addControl(mapTypeControl, daum.maps.ControlPosition.TOPRIGHT);
+
+		// 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
+		var zoomControl = new daum.maps.ZoomControl();
+		map.addControl(zoomControl, daum.maps.ControlPosition.RIGHT);
+		
+		//=============================================================================================================
+		//=============================================================================================================
+
+		
+	</script>
 
 </body>
 </html>
