--- a/mapSearch/WebContent/project.html
+++ b/mapSearch/WebContent/project.html
@@ -132,40 +132,14 @@
     <div class="container">
         <div class="row">
 			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; Contact Us</h4>
+				<h4 class="text-warning"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; 문의하기</h4>
 				<ul>
-					<li>54, North Road, PA 45086, USA</li>
-					<li>+1 888 455 6677</li>
-					<li><a href="mailto:mail@example.com">mail@example.com</a></li>
+					<li>서울 종로구 새문안로5가길 32 706호</li>
+					<li>대표전화 : 02-724-1114</li>
+					<li><a href="mailto:mail@example.com">kpc@kpc.com</a></li>
 				</ul>
 			</div>
-			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-file-text-o" aria-hidden="true"></i>&nbsp; Archive</h4>
-				<p>
-				<ul>
-					<li>May, 2015</li>
-					<li>April, 2015</li>
-					<li>March, 2015</li>
-					<li>February, 2016</li>
-					<li>January, 2016</li>
-				</ul>
-				</p>
-			</div>
-			<div class="col-md-3">
-				<h4 class="text-warning"><i class="fa fa-info" aria-hidden="true"></i>&nbsp; License</h4>
-				<p>
-				<ul>
-					<li>Online verification</li>
-					<li>Renewal License</li>
-					<li>Report illegal</li>
-					<li>More information</li>
-					<li>FAQs</li>
-				</ul>
-				</p>
-			</div>
-            <div class="col-md-3">
-                <p style="padding-top: 40px;">Created by <a href="https://www.shieldui.com" title="Shield UI">Shield UI</a> and hosted <br /> by <a href="https://www.prepbootstrap.com" title="PrepBootstrap">PrepBootstrap</a></p>
-            </div>
+			
         </div>
     </div>
 </footer>
