--- a/mapSearch/WebContent/contact.html
+++ b/mapSearch/WebContent/contact.html
@@ -141,7 +141,7 @@
 <div class="container-contact">
     <div class="container">
 	    <div class="page-header" id="contact">
-            <h1>찾아오시는 길</h1>
+            <h1>찾아오시는 길 & 문의하기</h1>
 			<br />
 			<div class="row">
 				<div class="col-md-6">
